--- a/BasicOpt3/Makefile
+++ b/BasicOpt3/Makefile
@@ -18,8 +18,8 @@ else
 LOADABLE_MODULE_OPTIONS=-shared
 endif
 
-PLUGIN=BasicOpt3.so
-PLUGIN_OBJECTS=BasicOpt3.o
+PLUGIN=BasicOpt3_2.so
+PLUGIN_OBJECTS=BasicOpt3_2.o
 ALL_OBJECTS=$(PLUGIN_OBJECTS)
 ALL_TARGETS=$(EXTRACT) $(FILTER) $(PLUGIN) $(PRINT) $(SIMPLIFY)
 
