--- a/MultToShift/Makefile
+++ b/MultToShift/Makefile
@@ -18,8 +18,8 @@ else
 LOADABLE_MODULE_OPTIONS=-shared
 endif
 
-PLUGIN=BasicOpt.so
-PLUGIN_OBJECTS=BasicOpt.o
+PLUGIN=MultToShift.so
+PLUGIN_OBJECTS=MultToShift.o
 ALL_OBJECTS=$(PLUGIN_OBJECTS)
 ALL_TARGETS=$(EXTRACT) $(FILTER) $(PLUGIN) $(PRINT) $(SIMPLIFY)
 
